<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="noTokens">No Tokens Defined</string>
    <string name="app_name">AndroidToken</string>
<string name="menu_add_token">Add Token</string>
<string name="menu_pin_change">Change PIN</string>
<string name="menu_pin_remove">Remove Pin</string>
<string name="menu_delete_token">Delete Token</string>
<string name="tokenType">Token Type</string>
<string name="tokenName">Name</string>
<string name="tokenSerial">Serial No</string>
<string name="tokenOtp">OTP Length</string>
<string name="tokenTimeStep">Time Step</string>
<string name="btnAddStep2">Next &gt;</string>
<string name="tokenTypeSpinnerPrompt">Select Token Type</string>
<string name="tokenOtpSpinnerPrompt">Select OTP Length</string>
<string name="tokenTimeStepSpinnerPrompt">Select Time Step</string>
<string name="tokenSeedMethod">Token Seed Method</string>
<string name="rbSeedManual">Direct Seed Entry</string>
<string name="rbSeedRandom">Generate Random Seed</string>
<string name="rbSeedPassword">Seed from Password</string>
<string name="tokenSeed">Token Seed Value</string>
<string name="tokenAddComplete">Complete</string>
<string name="dialogPositive">Ok</string>
<string name="tokenAddDialogNoName">Token Name is Required</string>
<string name="tokenAddDialogNoSerial">Token Serial is Required</string>
<string name="tokenAddDialogNoSeed">Token Seed is Required</string>
<string name="tokenAddDialogInvalidSeed">Token Seed is Invalid</string>
<string name="tokenrowtextserialcaption">S/N:</string>
<string name="pinChangeExistingPin">Enter Existing PIN</string>
<string name="pinChangeNew1">New PIN</string>
<string name="pinChangeNew2">Confirm PIN</string>
<string name="pinChangeSubmit">Save</string>
<string name="pinAlertInvalidPin">Existing PIN is invalid</string>
<string name="pinAlertNewPinsDifferent">The new PINs are not the same</string>
<string name="pinAlertNewPinBlank">New PIN is required</string>
<string name="pinRemoveExistingPin">Enter Existing PIN</string>
<string name="pinRemoveSubmit">Remove</string>
<string name="mainLogin">Login</string>
<string name="otpDialogTitle">One Time Password</string>
</resources>
