<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
  
  
<TextView
		android:id="@+id/tokenType"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/tokenType"
		>
</TextView>
<Spinner
		android:id="@+id/tokenTypeSpinner"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:prompt="@string/tokenTypeSpinnerPrompt"
>
</Spinner>
<TextView
		android:id="@+id/tokenName"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/tokenName"
>
</TextView>
<EditText
		android:id="@+id/tokenNameEdit"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="EditText"
		android:textSize="18sp"
>
</EditText>
<TextView
		android:id="@+id/tokenSerial"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/tokenSerial"
>
</TextView>
<EditText
		android:id="@+id/tokenSerialEdit"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="EditText"
		android:textSize="18sp"
>
</EditText>
  
<TextView android:text="@string/tokenOtp" 
		  android:id="@+id/tokenOtp" 
		  android:layout_width="wrap_content" 
		  android:layout_height="wrap_content"></TextView>

<Spinner android:id="@+id/tokenOtpSpinner" 
		 android:layout_width="wrap_content" 
		 android:layout_height="wrap_content"
		 android:prompt="@string/tokenOtpSpinnerPrompt"></Spinner>
		 
<TextView android:text="@string/tokenTimeStep" 
	      android:id="@+id/tokenTimeStep" 
	      android:layout_width="wrap_content" 
	      android:layout_height="wrap_content"></TextView>
	      
<Spinner android:id="@+id/tokenTimeStepSpinner" 
		 android:layout_width="wrap_content" 
		 android:layout_height="wrap_content"
		 android:prompt="@string/tokenTimeStepSpinnerPrompt" />
		 
<Button android:text="@string/tokenAddStep2" 
		android:id="@+id/tokenAddStep2" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"></Button>
		
</LinearLayout>
